# PorousTwoPhaseFlow

./: .gitignore  README.md  environment.yml  main.py  pyproject.toml  requirements.txt
data/: saturation_model_settings.json
porous_two_phase_flow/: constants.py  helper_functions.py  porous_layer.py  saturation_functions.py  saturation_model.py
porous_two_phase_flow/auxiliary/: capillary_pressure_gradient.py  capillary_pressure_saturation_curves.py  mixed_wettability_pore_size_distribution.py  saturation_two_phase_flow_2d.py
scripts/: capillary_two_phase_flow_1d.py  capillary_two_phase_flow_2d.py  settings.py
src/: analytic_leverett.py  capillary_two_phase_flow_1d.py  capillary_two_phase_flow_2d.py  fluids.py  helper_functions.py  mixed_wettability_pore_size_distribution.py  parameters.py  porous_layer.py  saturation_model.py  saturation_two_phase_flow_2d.py  settings.py  test_leverett.py  water_saturation_model_numerical.py
src/auxiliary/: analytic_leverett.py  pore_size_distribution.py  test_leverett.py  water_saturation_model.py
