[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "porous_two_phase_flow"
version = "0.0.1"
authors = [
  { name="Lukas Feierabend", email="lukas.feierabend@gmail.com" },
]
description = "Two-phase flow model in porous medium"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
"Homepage" = "https://github.com/lufire/PorousTwoPhaseFlow"
"Bug Tracker" = "https://github.com/lufire/PorousTwoPhaseFlow/issues"